--- a/client/src/BuildingBlocksContent/Header.module.css
+++ b/client/src/BuildingBlocksContent/Header.module.css
@@ -3,14 +3,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #76ac6d;
   width: 100%;
   height: 80px;
+  box-sizing: border-box;
 }
 
 .headerContent {
   display: flex;
   align-items: center;
+  margin-left: 12%; /* Add margin to the left */
 }
 
 .headerTextContainer {
@@ -35,6 +37,7 @@
   align-items: center;
   height: 100%;
   padding: 10px;
+  margin-right: 12%; /* Add margin to the right */
 }
 
 .headerImage {
